welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:2: error: '<-' expected but integer literal found.
  for (variable2 1 to 4){
                 ^Runner:23: error: illegal start of simple expression
} 
^